# google_prep

cv_tool/: CMakeLists.txt
cv_tool/include/: image_ops.hpp
cv_tool/src/: image_ops.cpp  main.cpp
